Fix text coloration for GTK-themed MdTextButtons.

BUG=598541

Review URL: https://codereview.chromium.org/1844193002

Cr-Commit-Position: refs/heads/master@{#384168}

Former-commit-id: 1552cd224ed227b7f2051b2756a9e13dc5a830ee